--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Dumb Phone</string>
+    <string name="apps_list">Apps List</string>
+    <string name="app_list">App List</string>
 </resources>
